--- a/.drone.yml
+++ b/.drone.yml
@@ -12,5 +12,5 @@ steps:
         from_secret: REGISTRY_PASSWORD
     commands:
       - helm registry login registry.ivanchenko.io -u $${REGISTRY_USERNAME} -p $${REGISTRY_PASSWORD}
-      - chart=$$(helm package chart)
+      - chart=$$(helm package .)
       - helm push $$(basename $${chart#*/}) oci://registry.ivanchenko.io/library
