--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -9,9 +9,9 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  type: LoadBalancer
   ports:
-    - protocol: UDP
+    - name: st-reborn
+      protocol: UDP
       port: 10578
       targetPort: 10578
   selector:
