--- a/values.yaml
+++ b/values.yaml
@@ -7,12 +7,20 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
-serviceAccount:
-  create: true
-  annotations: {}
-  name: ""
+port: 10578
 
-serviceAnnotations: {}
+config:
+  Gameplay:
+    fGoldLossFactor: 0
+  LiveServices:
+    bAnnounceServer: false
+  GameServer:
+    uPort: "{{ .Values.port }}"
+
+service:
+  type: NodePort
+  nodePort: 31313
+  annotations: {}
 
 podAnnotations: {}
 
@@ -28,10 +36,6 @@ securityContext: {}
   # runAsUser: 1000
 
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
   #   cpu: 100m
   #   memory: 128Mi
