add and mount cm

--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     {{- include "st-reborn.labels" . | nindent 4 }}
 data:
-  STServer.ini:
+  STServer.ini: |-
     {{- range $section, $settings := .Values.config }}
     [{{ $section }}]
     {{- range $key, $val := $settings }}
-    {{ $key }} = {{ tpl ($val | toString) . }}
+    {{ $key }}={{ tpl ($val | toString) $ }}
     {{- end }}
     {{ end }}
