--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "st-reborn.labels" . | nindent 4 }}
 data:
-  STServer.ini: |-
+  STServer_raw.ini: |-
     {{- range $section, $settings := .Values.config }}
     [{{ $section }}]
     {{- range $key, $val := $settings }}
