--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -31,6 +31,8 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command:
+            - '/bin/bash'
+            - '-c'
             - 'eval'
             - 'echo'
             - '\"$(cat /home/server/config/STServer_raw.ini)\"'
