add password support

--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     {{- include "st-reborn.labels" . | nindent 4 }}
 data:
+  entrypoint.sh:
+     eval "echo \"$(cat /home/server/config/STServer_raw.ini)\"" > /home/server/config/STServer.ini
+     ./SkyrimTogetherServer
   STServer_raw.ini: |-
     {{- range $section, $settings := .Values.config }}
     [{{ $section }}]
